# CosmicPistachio

./: CMakeLists.txt  CMakePresets.json  build_nbody.sh  main.cc
src/app/: CMakeLists.txt  app.cc  app.hh  camera.cc  camera.hh  renderer.cc  renderer.hh
src/app/shaders/: frag.glsl  vert.glsl
src/nbody_system/: CMakeLists.txt  initial_condition.cc  initial_condition.hh  math_functions.hh  math_functions_impl.hh  simd_vec.hh  system.cc  system.hh  vec.hh  vec_impl.hh
